Adding Custom Login Page and Documentation

--- a/finalProject/war/redirect.html
+++ b/finalProject/war/redirect.html
@@ -3,7 +3,7 @@
     <head>
     	<meta charset="utf-8"/>
 	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	    <title>Allison Martin Photography Redirect</title>
+	    <title>Some Cool Name Here Redirect</title>
 		<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 		<link href="prsc.css" rel="stylesheet">
 		<link href="bootstrap/css/bootstrap-theme.css" rel="stylesheet">
@@ -76,10 +76,10 @@
 	<body>
 		<div class="header-bkg">
 			<h1 class="voice-brand welcome-header">Please upgrade your browser to use the new</h1>
-			<h1 class="voice-brand welcome-header p2"> Allison Martin Photography Website</h1><br/>
+			<h1 class="voice-brand welcome-header p2"> Some Cool Name Here Website</h1><br/>
 		</div>
 		<div class="container">
-			<h1 class="voice-brand second-header">The new site was built to be awesome, but your current browser isn't....</h1>
+			<h1 class="voice-brand second-header">This new site was built to be awesome, but your current browser isn't....</h1>
 			<p class="voice-brand tag-line">Please download one of these supported modern browsers to optimize your experience:</p>
 			<div class="row">
 				<div class="col-md-3 custom-frame" align="center">
