--- a/finalProject/war/index.html
+++ b/finalProject/war/index.html
@@ -1,122 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Team 13</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
+
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>GATECH PHIRe</title>
     <!-- Styles Sheets -->
     <link href="js/bootstrap/css/bootstrap.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
     <link href="js/bootstrap/css/bootstrap-theme.css" rel="stylesheet">
-    <script type='text/javascript' src='/dwr/interface/DBServiceController.js'></script>
-    <script type='text/javascript' src='/dwr/engine.js'></script>
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
-	  <script src="respond.js"></script>
-    <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="logo.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="logo.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="logo.png">
-                    <link rel="apple-touch-icon-precomposed" href="logo.png">
-                                   <link rel="shortcut icon" href="logo.png">
-								   
-		<script src="js/browserRedirect.js"></script>				
   </head>
 
-  <body>
-  
-	<!-- Wrapper around the header area -->
-	<div class="row banner-row">
-		<div class="col-md-12 banner-wrapper">
-			
-		</div>
-	</div>
-	<div class="row header-wrapper">
-		
-		<div class="col-md-12 header-center">
-		
-
-		
-		 <div class="container">
-		 	<div id="alert-div-wrapper"></div>
-			<div class="navbar-header">
-			  <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			  </button>
-			  <div class="logo-wrapper">
-				<a href="../" class="navbar-brand"><img id="top-left-logo" src="img/buzz.jpg"></img></a>
-				<h2 class="website-title voice-brand">Some Cool Name Here</h2>
-			  </div>
-			</div>
-			<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-			  <ul class="nav navbar-nav"><!-- 
-				<li class="nav-bar-li">
-				   <button type="button" onClick='goToLink("http://frecklesandwhiskers.com/amp/about.html");' class="btn btn-default">
-						<img src="img/aboutIn.png" class="about-btn-img inactive-nav-btn"></img> 
-					  </button>
-				</li>
-				<li class="nav-bar-li">
-				  <button type="button" onClick='goToLink("http://frecklesandwhiskers.com/amp/investment.html");' class="btn btn-default">
-						<img src="img/investmentIn.png" class="investment-btn-img inactive-nav-btn"></img>							
-					  </button>
-				</li>
-				<li class="nav-bar-li">
-				  <button type="button" onClick='goToLink("http://frecklesandwhiskers.com/amp/wedding.html")' class="btn btn-default">
-						<img src="img/weddingIn.png" class="wedding-btn-img inactive-nav-btn"></img>
-					  </button>
-				</li>
-				<li class="nav-bar-li">
-				  <button type="button" onClick='goToLink("http://frecklesandwhiskers.com/amp/gallery.html")' class="btn btn-default">
-						<img src="img/galleriesIn.png" class="gallery-btn-img inactive-nav-btn"></img>
-					  </button>
-				</li>
-				<li class="nav-bar-li">
-				  <button type="button" onClick='goToLink("http://frecklesandwhiskers.com/amp/kindwords.html")' class="btn btn-default">
-						<img src="img/kindIn.png" class="kind-btn-img inactive-nav-btn"></img> 
-					  </button>
-				</li>  -->
-			  </ul>
-			</nav>
-		  </div>
-			
-		</div>
-				
-
-			
-		
-	</div>  <!-- End of Header Wrapper -->
-  
-	<!-- The Main Container -->
-	<div class="container">
-		
-		<div class="row author-info-block data-block">
-			<div class="col-md-12 author-info-block-wrapper data-block-wrapper">
-			
+  <body class="login-body">
+   <div class="container login-container">
+	<div id="alert-div-wrapper"></div>
+   
+   <div id="header-space"></div>
+   <div class="row login-centered-row">
+	   <div class="row login-intro-row">
+	   		<div class="span11 offset1">
+	   			<h1 id="login-welcome">Patient Health Information Records(PHIRe) Login</h1>
+	   		</div>
+	   	</div>
+	   	<div class="row login-row">
+	   		<div class="span11 offset1">
+	   			<form name = "login-form">
+					<p id="login-username">Username:  </p> <input type="text" name="username" placeholder="UserName" id="usernameInput"> 
+					<p id="login-password"> Password: </p> <input type="password" name="pword" placeholder="Password" id="passInput"><br/>
+					<input class="btn login-btn" type="button" value="Log In" name="Submit" onclick= "validateCredentials()">
+				</form>
 			</div>
 		</div>
-	
-		<footer>
-			<p class="pull-right"><a href="#">Back to top</a></p>
-			<p>Team 13 &middot; </p>
-			<p>Georgia Tech CS</p>
-		</footer>
-	</div>
-  
-
-   <!-- The javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-	<script src="js/jquery.js"></script>
+		<div class="row create-new-account-row">
+			<div class="span11 offset1">
+				<p id="login-sub-instrc">Haven't Joined the Revolution Yet? Create an Account <a href="createAccount.html">Here</a></p>
+			</div>
+		</div>	
+   	</div>
+   </div>
+   
+   	<script src="js/jquery.js"></script>
     <script src="js/bootstrap/js/bootstrap.js"></script>
-	<script src="js/custom.js"></script>
+        <script type='text/javascript' src='/dwr/interface/DBServiceController.js'></script>
+    <script type='text/javascript' src='/dwr/engine.js'></script>
+    <script type='text/javascript' src='js/login.js'></script>
   </body>
+</html>
