--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -85,12 +85,85 @@
 			
 			</div>
 		</div>
-	
+		<div class="row" id="patient-info-row">
+			<div class="col-md-12" id="patient-info-wrapper">
+				<div class="patient-header">
+					<p class="patient-header-text"> Patient Information:</p>
+				</div>
+			</div>
+		</div>
+		<div class="row widget-row" id="first-widget-row">
+			<div class="col-md-4 widget-wrapper" id="left-widget">
+				<div class="widget-header">
+					<p class="widget-header-text"> Last Visit:</p>
+				</div>
+				<div class="widget-content">
+					<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+					  Launch a demo modal
+					</button>
+				</div>
+			</div>
+			<div class="col-md-4 widget-wrapper" id="middle-widget">
+				<div class="widget-header">
+					<p class="widget-header-text"> Recent Vitals:</p>
+				</div>
+				<div class="widget-content">
+					<button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo">
+					  Show/Hide Collapsible
+					</button>
+					<div id="demo" class="collapse">Drill Down Information Would Be Here</div>
+				</div>
+			</div>
+			<div class="col-md-4 widget-wrapper" id="right-widget">
+				<div class="widget-header">
+					<p class="widget-header-text"> Medication Summary:</p>
+				</div>
+			</div>
+		</div>
+		<div class="row widget-row" id="second-widget-row">
+			<div class="col-md-4 widget-wrapper" id="left-widget">
+				<div class="widget-header">
+					<p class="widget-header-text"> Allergies & Alerts:</p>
+				</div>
+			</div>
+			<div class="col-md-4 widget-wrapper" id="middle-widget">
+				<div class="widget-header">
+					<p class="widget-header-text"> Procedure/Lab Summary:</p>
+				</div>
+			</div>
+			<div class="col-md-4 widget-wrapper" id="right-widget">
+				<div class="widget-header">
+					<p class="widget-header-text"> Other:</p>
+				</div>
+			</div>
+		</div>
 		<footer>
 			<p class="pull-right"><a href="#">Back to top</a></p>
 			<p>Team 13 &middot; </p>
 			<p>Georgia Tech CS</p>
 		</footer>
+		
+		
+		
+		<!-- Modal -->
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+			<div class="modal-content">
+			  <div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+				<h4 class="modal-title" id="myModalLabel">Some Title Here</h4>
+			  </div>
+			  <div class="modal-body">
+				<p> Drill Down Information would be shown here </p>
+			  </div>
+			  <div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		
+		
 	</div>
   
 
