Added Lab Results div and new icon that can be used in header

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -211,6 +211,32 @@
 				</div>
 			</div>
 		</div>
+		<div class="row widget-row" id="fourth-widget-row">
+			<div class="col-md-6 widget-wrapper" id="middle-widget">
+				<div class="widget-header">
+					<p class="widget-header-text">Lab Results:</p>
+				</div>
+				<div class="widget-content row">
+					<div id="results-div">
+						<table id="results-table" width="100%" cellspacing="0"
+							class="table">
+							<thead>
+								<tr>
+									<th>Visit Date</th>
+									<th>Test</th>
+									<th>LOINC</th>
+									<th>Value</th>
+									<th>Unit</th>
+									<th>Short Name</th>
+								</tr>
+							</thead>
+							<tbody id="results-tb">
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
 		<footer>
 			<p class="pull-right"><a href="#">Back to top</a></p>
 			<p>Team 13 &middot; </p>
