--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -197,12 +197,42 @@
 				<div class="widget-header">
 					<p class="widget-header-text"> Problems:</p>
 				</div>
+				<div class="widget-content row">
+					<div id="results-div">
+						<table id="problems-table" width="100%" cellspacing="0"
+							class="table">
+							<thead>
+								<tr>
+									<th>Problem</th>
+								</tr>
+							</thead>
+							<tbody id="problems-tb">
+							</tbody>
+						</table>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row widget-row" id="fourth-widget-row">
 			<div class="col-md-6 widget-wrapper" id="middle-widget">
 				<div class="widget-header">
 					<p class="widget-header-text"> Social History:</p>
+				</div>
+				<div class="widget-content row">
+					<div id="results-div">
+						<table id="social-history-table" width="100%" cellspacing="0"
+							class="table">
+							<thead>
+								<tr>
+									<th>History</th>
+									<th>From</th>
+									<th>To</th>
+								</tr>
+							</thead>
+							<tbody id="social-history-tb">
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
 			<div class="col-md-6 widget-wrapper" id="right-widget">
