--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -207,6 +207,7 @@
 		<div class='row hidden-info-row'>
 			<button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#sh-collapse">
 			  Social History:
+			  
 			</button>
 			<div id="sh-collapse" class="collapse">
 				
@@ -394,7 +395,25 @@
 		
 		
 	</div>
-  
+	
+	<div class="modal" id="pleaseWaitDialog" data-backdrop="static" data-keyboard="false">
+	   <div class="modal-dialog">
+		<div class="modal-content">
+		  <div class="modal-header">
+			<h3 class="voice-brand loading-modal-header">Loading The Awesomeness.....</h3>
+		   </div>
+		  <div class="modal-body">
+			<div class="progress">
+			  <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+				<span class="sr-only">100% Complete</span>
+			  </div>
+			</div>
+		  </div>
+		  <div class="modal-footer">
+		  </div>
+		</div>
+	  </div>
+	</div>
 
    <!-- The javascript
     ================================================== -->
