Correcting hide/collapse titles

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -206,7 +206,7 @@
 		</div>
 		<div class='row hidden-info-row'>
 			<button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#sh-collapse">
-			  Social History:
+			  Social History >
 			  
 			</button>
 			<div id="sh-collapse" class="collapse">
@@ -234,7 +234,7 @@
 		</div>
 		<div class='row hidden-info-row'>
 			<button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#other-collapse">
-			  Other:
+			  Other >
 			</button>
 			<div id="encounter-collapse" class="collapse">
 				<div class="row widget-row" id="fourth-widget-row">
@@ -257,7 +257,7 @@
 		</div>
 		<div class='row hidden-info-row'>
 			<button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#lab-collapse">
-				Lab Results:
+				Lab Results >
 			</button>
 			<div id="lab-collapse" class="collapse">
 				<div class="row widget-row" id="fifth-widget-row">
@@ -287,7 +287,7 @@
 		</div>
 		<div class='row hidden-info-row'>
 			<button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#problems-collapse">
-			  Problems:
+			  Problems >
 			</button>
 			<div id="problems-collapse" class="collapse">
 				<div class="row widget-row" id="sixth-widget-row">
