Starting the typeahead work

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -59,7 +59,14 @@
 			  </button>
 			  <div class="logo-wrapper">
 				<a href="../" class="navbar-brand"><img id="top-left-logo" src="img/heart258.png"></img></a>
-				<h2 class="website-title voice-brand">PHIRe</h2>
+				<h2 class="website-title voice-brand">????</h2>
+			  </div>
+			  <div id="typeahead-div">
+				<p id="typeahead-header">Open New CCD</p>
+				<div id="the-basics">
+				  <input class="typeahead" type="text" placeholder="Start Typing Patient Name">
+				</div>
+				<button class="btn open-btn" onclick="openCCD()">Open</button>
 			  </div>
 			</div>
 			<nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
@@ -69,7 +76,10 @@
 						<img src="img/aboutIn.png" class="about-btn-img inactive-nav-btn"></img> 
 					  </button>
 				</li>  -->
-			  </ul>
+				</ul>
+				
+
+			  
 			</nav>
 		  </div>
 			
@@ -426,5 +436,6 @@
 	<!-- DataTables -->
 	<script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.2/js/jquery.dataTables.js"></script>
     <script src="js/bootstrap/js/bootstrap.js"></script>
+	<script src="js/typeahead.jquery.js"></script>
 	<script src="js/custom.js"></script>
   </body>
