Working patient selector typeahead (hardcoded)

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -62,7 +62,7 @@
 				<h2 class="website-title voice-brand">????</h2>
 			  </div>
 			  <div id="typeahead-div">
-				<p id="typeahead-header">Open New CCD</p>
+				<p id="typeahead-header">Open CCD</p>
 				<div id="the-basics">
 				  <input class="typeahead" type="text" placeholder="Start Typing Patient Name">
 				</div>
