Adding User Roles, fixing null pointer error on login

--- a/finalProject/war/createAccount.html
+++ b/finalProject/war/createAccount.html
@@ -29,6 +29,12 @@
 					<input type="text" name="username" placeholder="UserName" id="usernameInput"> 
 					<input type="password" name="pword" placeholder="Password" id="passInput"><br/>
 					<input type="password" name="repword" placeholder="Renter Password" id="passInputRE"><br/>
+					<select id="sselect">
+					  <option value="pcp">PCP</option>
+					  <option value="s1">Specialist 1</option>
+					  <option value="s2">Specialist 2</option>
+					  <option value="s3">Specialist 3</option>
+					</select>
 					<input class="btn login-btn" type="button" value="Submit" name="Submit" onclick= "createUser()">
 				</form>
 			</div>
