Parsing out just the drug info

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -194,15 +194,15 @@
 				</div>
 				<div class="widget-content">
 				
-					<div class="col-md-6 widget-col">
-						 <p class="widget-header-txt">Visit Date</p>
-						 <p class="medication-text inject-txt"></p>
-						 <p class="widget-header-txt">Drug</th>
-						 <p class="medication-text inject-txt"></p>
+					<div class="col-md-11 widget-col medication-text">
+						<!-- <p class="widget-header-txt">Visit Date</p>
+						 <p class="medication-text inject-txt"></p> 
+						 <p class="widget-header-txt">Drug</th>-->
+						<!-- <p class="medication-text inject-txt"></p>
 						 <p class="widget-header-txt">NDC</th>
-						 <p class="medication-text inject-txt"></p>
+						 <p class="medication-text inject-txt"></p> -->
 					</div>
-					<div class="col-md-6 widget-col">	
+					<!--<div class="col-md-6 widget-col">	
 						 <p class="widget-header-txt">Type</th>
 						 <p class="medication-text inject-txt"></p>
 						 <p class="widget-header-txt">Quantity</th>
@@ -211,7 +211,7 @@
 						 <p class="medication-text inject-txt"></p>
 					 	 <p class="widget-header-txt">Instructions</th>
 						 <p class="medication-text inject-txt"></p>	
-					</div>
+					</div> -->
 										
 				</div>
 				<div class="row more-info-row">
