Parsing Allergies, Adding Bob, Correcting Dates

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Team 13</title>
+    <title>eHIP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -59,7 +59,7 @@
 			  </button>
 			  <div class="logo-wrapper">
 				<a href="../" class="navbar-brand"><img id="top-left-logo" src="img/heart258.png"></img></a>
-				<h2 class="website-title voice-brand">????</h2>
+				<h2 class="website-title voice-brand">eHIP</h2>
 			  </div>
 			  <div id="typeahead-div">
 				<p id="typeahead-header">Open CCD</p>
@@ -138,19 +138,21 @@
 						 <p class="enounter-text inject-txt"></p>
 						 <p class="widget-header-txt">ICD-9</th>
 						 <p class="enounter-text inject-txt"></p>
+					 </div>
+					 <div class="col-md-6 widget-col">	
 						 <p class="widget-header-txt">Height</th>
 						 <p class="enounter-text inject-txt"></p>
 						 <p class="widget-header-txt">Weight</th>
 						 <p class="enounter-text inject-txt"></p>
-					 </div>
-					 <div class="col-md-6 widget-col">						 
 						 <p class="widget-header-txt">Pulse</th>
 						 <p class="enounter-text inject-txt"></p>
 						 <p class="widget-header-txt">Respiration</th>
 						 <p class="enounter-text inject-txt"></p>
 						 <p class="widget-header-txt">Blood Pressure</th>
 						 <p class="enounter-text inject-txt"></p>
-						 <p class="widget-header-txt">Notes</th>
+					</div>
+					<div class="col-md-12 widget-col">
+						<p class="widget-header-txt">Notes</th>
 						 <p class="enounter-text inject-txt"></p>
 					</div>
 				</div>
@@ -189,7 +191,7 @@
 		
 			<div class="col-md-4 widget-wrapper" id="right-widget">
 					
-				<div class="widget-header">
+				<div class="widget-header right-widget-header">
 					<p class="widget-header-text"> Medication:</p>
 				</div>
 				<div class="widget-content">
