--- a/finalProject/war/redirect.html
+++ b/finalProject/war/redirect.html
@@ -76,7 +76,7 @@
 	<body>
 		<div class="header-bkg">
 			<h1 class="voice-brand welcome-header">Please upgrade your browser to use the new</h1>
-			<h1 class="voice-brand welcome-header p2"> Some Cool Name Here Website</h1><br/>
+			<h1 class="voice-brand welcome-header p2"> eHIP</h1><br/>
 		</div>
 		<div class="container">
 			<h1 class="voice-brand second-header">This new site was built to be awesome, but your current browser isn't....</h1>
