Correcting Allergy Parsing and Fix for switching DataTables

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -118,8 +118,8 @@
 						 <div class="col-md-3 widget-col user-allergies-wrapper">
 							<h2 class="voice-brand allergies-header">Allergies</h2>
 							<p id="allergies-container">No Known Allergies</p>
-							<div class="row more-info-row">
-								<div class="col-md-12 more-info-wrapper">
+							<div class="row more-info-row allergy-more-info-row">
+								<div class="col-md-12 more-info-wrapper allergy-mi-wrapper">
 									<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#allergyModal">
 									  More Information
 									</button>
