--- a/finalProject/war/index.html
+++ b/finalProject/war/index.html
@@ -4,7 +4,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>GATECH PHIRe</title>
+    <title>GATECH eHIP</title>
     <!-- Styles Sheets -->
     <link href="js/bootstrap/css/bootstrap.css" rel="stylesheet">
 	<link href="css/custom.css" rel="stylesheet">
@@ -20,7 +20,7 @@
    <div class="row login-centered-row">
 	   <div class="row login-intro-row">
 	   		<div class="span11 offset1">
-	   			<h1 id="login-welcome">Patient Health Information Records(PHIRe) Login</h1>
+	   			<h1 id="login-welcome">eHIP Login</h1>
 	   		</div>
 	   	</div>
 	   	<div class="row login-row">
