Adding User Role and Centering Typeahead

--- a/finalProject/war/createAccount.html
+++ b/finalProject/war/createAccount.html
@@ -31,9 +31,7 @@
 					<input type="password" name="repword" placeholder="Renter Password" id="passInputRE"><br/>
 					<select id="sselect">
 					  <option value="pcp">PCP</option>
-					  <option value="s1">Specialist 1</option>
-					  <option value="s2">Specialist 2</option>
-					  <option value="s3">Specialist 3</option>
+					  <option value="s1">Cardiologist</option>
 					</select>
 					<input class="btn login-btn" type="button" value="Submit" name="Submit" onclick= "createUser()">
 				</form>
