--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -50,6 +50,7 @@
 		 <div class="container">
 		 	<div id="alert-div-wrapper"></div>
 		 	<div id="username-div"></div>
+			<div id="role-div"></div>
 			<div class="navbar-header">
 			  <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
 				<span class="sr-only">Toggle navigation</span>
