error message, modal names

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -354,7 +354,7 @@
 			<div class="modal-content">
 			  <div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-				<h4 class="modal-title" id="medModalLabel">Some Title Here</h4>
+				<h4 class="modal-title" id="medModalLabel">Detailed Medication Info.</h4>
 			  </div>
 			  <div class="modal-body">
 				<div class="widget-table-wrapper">
@@ -391,7 +391,7 @@
 			<div class="modal-content">
 			  <div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-				<h4 class="modal-title" id="encounterModalLabel">Some Title Here</h4>
+				<h4 class="modal-title" id="encounterModalLabel">Detailed Encounter Info.</h4>
 			  </div>
 			  <div class="modal-body">
 				<div class="widget-table-wrapper">
@@ -430,7 +430,7 @@
 			<div class="modal-content">
 			  <div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-				<h4 class="modal-title" id="procedureModalLabel">Some Title Here</h4>
+				<h4 class="modal-title" id="procedureModalLabel">Detailed Procedure Info.</h4>
 			  </div>
 			  <div class="modal-body">
 				<div class="widget-table-wrapper">
