Change color of the medicaiton widget to be a little more readable

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -134,7 +134,7 @@
 		<div class="row widget-row" id="first-widget-row">
 			<div class="col-md-4 widget-wrapper" id="left-widget">
 				<div class="widget-header">
-					<p class="widget-header-text"> Encounters:</p>
+					<p class="widget-header-text"> Most Recent Encounter:</p>
 				</div>
 				<div class="widget-content row">
 					<div class="col-md-6 widget-col">
@@ -167,7 +167,7 @@
 				<div class="row more-info-row">
 					<div class="col-md-12 more-info-wrapper">
 						<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#encounterModal">
-						  More Information
+						  Past Encounters
 						</button>
 					</div>
 				</div>
@@ -196,7 +196,7 @@
 			<div class="col-md-4 widget-wrapper" id="right-widget">
 					
 				<div class="widget-header right-widget-header">
-					<p class="widget-header-text"> Medication:</p>
+					<p class="widget-header-text"> Medications:</p>
 				</div>
 				<div class="widget-content">
 				
