Make input fields easier to read and fix alignment

--- a/finalProject/war/index.html
+++ b/finalProject/war/index.html
@@ -26,8 +26,8 @@
 	   	<div class="row login-row">
 	   		<div class="span11 offset1">
 	   			<form name = "login-form">
-					<p id="login-username">Username:  </p> <input type="text" name="username" placeholder="UserName" id="usernameInput"> 
-					<p id="login-password"> Password: </p> <input type="password" name="pword" placeholder="Password" id="passInput"><br/>
+					<input type="text" name="username" placeholder="UserName" id="usernameInput"> 
+					<input type="password" name="pword" placeholder="Password" id="passInput"><br/>
 					<input class="btn login-btn" type="button" value="Log In" name="Submit" onclick= "validateCredentials()">
 				</form>
 			</div>
