--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -13,7 +13,10 @@
     <link href="js/bootstrap/css/bootstrap-theme.css" rel="stylesheet">
 	<!-- DataTables CSS -->
 	<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.2/css/jquery.dataTables.css">
-  
+  	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+ 	<script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+ 	<script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
     <script type='text/javascript' src='/dwr/interface/DBServiceController.js'></script>
     <script type='text/javascript' src='/dwr/engine.js'></script>
 
@@ -131,6 +134,8 @@
 					
 			</div>
 		</div>
+		<div id="bpchart" style="height: 250px;"></div>
+		
 		<div class="row widget-row" id="first-widget-row">
 			<div class="col-md-4 widget-wrapper" id="left-widget">
 				<div class="widget-header">
