Created account for patient

--- a/finalProject/war/createAccount.html
+++ b/finalProject/war/createAccount.html
@@ -32,6 +32,7 @@
 					<select id="sselect">
 					  <option value="pcp">PCP</option>
 					  <option value="s1">Cardiologist</option>
+					  <option value="pat">Patient</option>
 					</select>
 					<input class="btn login-btn" type="button" value="Submit" name="Submit" onclick= "createUser()">
 				</form>
