Medications changed to only Active Medications

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -47,9 +47,7 @@
 	<div class="row header-wrapper">
 		
 		<div class="col-md-12 header-center">
-		
 
-		
 		 <div class="container">
 		 	<div id="alert-div-wrapper"></div>
 		 	<div id="username-div"></div>
@@ -201,7 +199,7 @@
 			<div class="col-md-4 widget-wrapper" id="right-widget">
 					
 				<div class="widget-header right-widget-header">
-					<p class="widget-header-text"> Medications:</p>
+					<p class="widget-header-text"> Active Medications:</p>
 				</div>
 				<div class="widget-content">
 				
