Change text of medications button

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -226,7 +226,7 @@
 				<div class="row more-info-row">
 					<div class="col-md-12 more-info-wrapper">
 						 <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#medModal">
-						  More Information
+						  Medication History
 						</button>
 					</div>
 				</div>
