Change deploy project location to ehip-health. Add a user auth loading dialog. Change the CCD loading dialog

--- a/finalProject/war/index.html
+++ b/finalProject/war/index.html
@@ -17,6 +17,24 @@
 	<div id="alert-div-wrapper"></div>
    
    <div id="header-space"></div>
+   <div class="modal" id="pleaseWaitDialog" data-backdrop="static" data-keyboard="false">
+	   <div class="modal-dialog">
+		<div class="modal-content">
+		  <div class="modal-header">
+			<h3 class="voice-brand loading-modal-header">Loading Patient CCD.....</h3>
+		   </div>
+		  <div class="modal-body">
+			<div class="progress">
+			  <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+				<span class="sr-only">100% Complete</span>
+			  </div>
+			</div>
+		  </div>
+		  <div class="modal-footer">
+		  </div>
+		</div>
+	  </div>
+	</div>
    <div class="row login-centered-row">
 	   <div class="row login-intro-row">
 	   		<div class="span11 offset1">
