--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -482,7 +482,7 @@
 	   <div class="modal-dialog">
 		<div class="modal-content">
 		  <div class="modal-header">
-			<h3 class="voice-brand loading-modal-header">Loading The Awesomeness.....</h3>
+			<h3 class="voice-brand loading-modal-header">Loading Patient CCD.....</h3>
 		   </div>
 		  <div class="modal-body">
 			<div class="progress">
