--- a/finalProject/war/index.html
+++ b/finalProject/war/index.html
@@ -40,6 +40,28 @@
    	</div>
    </div>
    
+   <div class="modal" id="pleaseWaitDialog" data-backdrop="static"
+			data-keyboard="false">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h3 class="voice-brand loading-modal-header">Loading Patient
+							CCD.....</h3>
+					</div>
+					<div class="modal-body">
+						<div class="progress">
+							<div class="progress-bar progress-bar-striped active"
+								role="progressbar" aria-valuenow="100" aria-valuemin="0"
+								aria-valuemax="100" style="width: 100%">
+								<span class="sr-only">100% Complete</span>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer"></div>
+				</div>
+			</div>
+		</div>
+   
    	<script src="js/jquery.js"></script>
     <script src="js/bootstrap/js/bootstrap.js"></script>
         <script type='text/javascript' src='/dwr/interface/DBServiceController.js'></script>
