Default collapsible to collapse

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -253,7 +253,7 @@
 		<div class='row hidden-info-row'>
 			<button type="button" class="btn btn-danger" data-toggle="collapse"
 				data-target="#sh-collapse">Social History ></button>
-			<div id="sh-collapse" class="collapse in" >
+			<div id="sh-collapse" class="collapse" >
 
 				<div class="row widget-row" id="third-widget-row">
 					<div class="col-md-12 widget-wrapper" id="middle-widget">
@@ -280,7 +280,7 @@
 		<div class='row hidden-info-row'>
 			<button type="button" class="btn btn-danger" data-toggle="collapse"
 				data-target="#lab-collapse">Lab Results ></button>
-			<div id="lab-collapse" class="collapse in">
+			<div id="lab-collapse" class="collapse">
 				<div class="row widget-row" id="fifth-widget-row">
 					<div class="col-md-12 widget-wrapper" id="middle-widget">
 						<div class="widget-content row">
@@ -309,7 +309,7 @@
 		<div class='row hidden-info-row'>
 			<button type="button" class="btn btn-danger" data-toggle="collapse"
 				data-target="#problems-collapse">Procedures ></button>
-			<div id="problems-collapse" class="collapse in">
+			<div id="problems-collapse" class="collapse">
 				<div class="row widget-row" id="sixth-widget-row">
 					<div class="col-md-12 widget-wrapper" id="left-widget">
 						<div class="widget-content">
