Change to pulmonologist

--- a/finalProject/war/createAccount.html
+++ b/finalProject/war/createAccount.html
@@ -31,7 +31,7 @@
 					<input type="password" name="repword" placeholder="Renter Password" id="passInputRE"><br/>
 					<select id="sselect">
 					  <option value="pcp">PCP</option>
-					  <option value="s1">Cardiologist</option>
+					  <option value="s1">Pulmonologist</option>
 					  <option value="pat">Patient</option>
 					</select>
 					<input class="btn login-btn" type="button" value="Submit" name="Submit" onclick= "createUser()">
