--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -199,7 +199,7 @@
 			</div>
 			<div class="col-md-4 widget-wrapper" id="middle-widget">
 				<div class="widget-header">
-					<p class="widget-header-text">Problems:</p>
+					<p class="widget-header-text">Active Problems/Diagnoses:</p>
 				</div>
 				<div class="widget-content">
 
@@ -210,7 +210,7 @@
 				<div class="row more-info-row">
 					<div class="col-md-12 more-info-wrapper">
 						<button class="btn btn-primary btn-lg" data-toggle="modal"
-							data-target="#procedureModal">More Information</button>
+							data-target="#procedureModal">Diagnosis History</button>
 					</div>
 				</div>
 			</div>
