Add start and end date for medications

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -228,26 +228,8 @@
 					<p class="widget-header-text">Active Medications:</p>
 				</div>
 				<div class="widget-content">
-
 					<div class="col-md-11 widget-col medication-text">
-						<!-- <p class="widget-header-txt">Visit Date</p>
-						 <p class="medication-text inject-txt"></p> 
-						 <p class="widget-header-txt">Drug</th>-->
-						<!-- <p class="medication-text inject-txt"></p>
-						 <p class="widget-header-txt">NDC</th>
-						 <p class="medication-text inject-txt"></p> -->
 					</div>
-					<!--<div class="col-md-6 widget-col">	
-						 <p class="widget-header-txt">Type</th>
-						 <p class="medication-text inject-txt"></p>
-						 <p class="widget-header-txt">Quantity</th>
-						 <p class="medication-text inject-txt"></p>
-						 <p class="widget-header-txt">Refills</th>
-						 <p class="medication-text inject-txt"></p>
-					 	 <p class="widget-header-txt">Instructions</th>
-						 <p class="medication-text inject-txt"></p>	
-					</div> -->
-
 				</div>
 				<div class="row more-info-row">
 					<div class="col-md-12 more-info-wrapper">
@@ -369,6 +351,9 @@
 										<th>Quantity</th>
 										<th>Refills</th>
 										<th>Instructions</th>
+										<th>Status</th>
+										<th>Start Date</th>
+										<th>End Date</th>
 									</tr>
 								</thead>
 								<tbody id="medication-tb">
