Active Problems and dates

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -457,6 +457,9 @@
 								<thead>
 									<tr>
 										<th>Problem</th>
+										<th>Status</th>
+										<th>Start Date</th>
+										<th>End Date</th>
 									</tr>
 								</thead>
 								<tbody id="problems-tb">
