Remove patient role

--- a/finalProject/war/home.html
+++ b/finalProject/war/home.html
@@ -286,7 +286,7 @@
 						<div class="widget-content row">
 							<div id="results-div">
 								<table id="results-table" width="100%" cellspacing="0"
-									class="table">
+									class="table" height=>
 									<thead>
 										<tr>
 											<th>Visit Date</th>
